# nzr-audio-enhacer

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
specs/001-music-quality-enhancer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-music-quality-enhancer/checklists/: requirements.md
specs/001-music-quality-enhancer/contracts/: cli-interface.md
src/: __init__.py  cli.py
src/models/: __init__.py  audio_file.py  config.py  errors.py  metrics.py  result.py  stage.py
src/services/: __init__.py  ai_models.py  analyzer.py  dynamics.py  enhancer.py  exporter.py  loader.py  noise_reduction.py  spectral.py
src/utils/: __init__.py  progress.py
tests/: __init__.py  conftest.py
