[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nzr-music-enhancer"
version = "0.1.0"
description = "AI-powered music quality enhancer for .wav files"
readme = {text = "AI-powered music quality enhancer for .wav files", content-type = "text/plain"}
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "NZR Group"}
]
keywords = ["audio", "music", "enhancement", "ai", "noise-reduction", "dsp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "deepfilternet>=0.5.0",
    "librosa>=0.10.0",
    "scipy>=1.11.0",
    "soundfile>=0.12.0",
    "noisereduce>=3.0.0",
    "click>=8.1.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
enhance-audio = "src.cli:main"

[project.urls]
Homepage = "https://github.com/nzrgroup/nzr-music-enhancer"
Repository = "https://github.com/nzrgroup/nzr-music-enhancer"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
